fixed button margins to center buttons on mobile displays

--- a/assets/style.css
+++ b/assets/style.css
@@ -88,7 +88,7 @@ header {
   }
 
   .pbutton {
-    margin: 9px;
+    margin: 9px 0px;
     padding: 9px;
     border-radius: 5px;
     border: rgba(0, 0, 0, 0.267) solid 2px;
@@ -101,7 +101,7 @@ header {
   }
 
   .score-display {
-    margin: 9px;
+    margin: 9px 0px;
     padding: 9px;
     border-radius: 10px;
     background-color: black;
